--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-icons": "^4.11.0",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "style-components": "^0.1.0",
     "styled-components": "^6.0.8",
     "web-vitals": "^2.1.4"
