--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-redux": "^8.1.2",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
+    "redux": "^4.2.1",
     "style-components": "^0.1.0",
     "styled-components": "^6.0.8",
     "web-vitals": "^2.1.4"
